# k8-examples

./: .env  Cargo.toml  README.adoc
api-gateway-app/: README.adoc  ingress-controller-example.uxf
docs/: jsa-k8-cheatsheet.uxf
game-of-pods/redis-island/: redis-configmap.yaml  redis-service.yaml  redis-statefulset.yaml  redis-storageclass.yaml
lighting-labs/lab-01/: tasks.adoc
monitoring-app/: Cargo.toml  Dockerfile  containerize.sh
monitoring-app/k8/: grafana-deployment.yaml  grafana-service.yaml  monitoring-app-deployment.yaml  monitoring-app-service.yaml  prometheus-clusterrole.yaml  prometheus-deployment.yaml
monitoring-app/src/: lib.rs  main.rs  metrics.rs
mqtt-app/: Cargo.toml
mqtt-app/k8/: broker-deployment.yaml
probes-app/: Cargo.toml  Dockerfile  containerize.sh
probes-app/k8/: config-map.yaml  deployment.yaml
probes-app/src/: config.rs  health.rs  lib.rs  main.rs  ready.rs
redis-app/: Cargo.toml  Dockerfile  cluster-init  cluster-init.sh  containerize.sh
redis-app/k8/: redis-service.yaml
redis-app/k8-cluster/: redis-service.yaml  redis-statefulset.yaml
redis-app/k8-single/: redis-configmap.yaml  redis-deployment.yaml  redis-service.yaml
redis-app/src/: main.rs
