[package]
name = "monitoring-app"
version = "0.1.0"
authors = ["Jil Sahm"]
edition = "2018"

[dependencies]
# utils
dotenv = "0.15.0"
env_logger = "0.8.3"
lazy_static = "1.4.0"
log = "0.4.14"
rand = "0.8.3"

# monitoring
prometheus = "0.12.0"

# runtimes
tokio = { version = "1.5.0", features = ["full"] }
warp = "0.3"